# floppa-CLI

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  config.example.toml  justfile  package.json  secrets.example.toml  vite.config.ts
.sqlx/: query-000fd76cd34c5d64c0255588214a29c34419d2cc53dcfe32430ef14c87fdf70e.json  query-21a93390ab5da9c44412216d218b379a5dd58e00f98f1ffd4ba3df024f590741.json  query-23a176d699a4fe6472802e4318fb98e4e0da5a72ff2d2629257e0d4f3446d7dc.json  query-33a3d1dfc0cbb6a86cd8a1a51b4fd29d35288d8ba72bb4531c68d3282914b8f3.json  query-3bfd5325a27617f05350b4fd0dd0bcafd45b20d327c04171f0822a71b0a28468.json  query-432cc1ba59fdfd793e64ee1ab5fd471c80ff52f68ec87844267b9311ba421ffc.json  query-682d6c37332882c4986d6625ba4db6f8581bd8834703a0a85247d592335c21f5.json  query-764c42ba0f0b962c8b82ceb5efa94d784ad27a32d0dfeb82ed52c1e9898a093b.json  query-76d7c876881f3341d309fd2e8f68d8aba4e5bd4bd86f15b63c6bbca1bf0cd621.json  query-951801df7a5bbccb1cd18e1f72e817e326ec562643b5b9bafcb352aee5b9685b.json  query-9528687757f968444b927bd3ef4200b4b63bbccf236b6a49342c289b03602fe0.json  query-b49f498e80c12ec1c4fed7348fcb60359552cd7382a8739b656058990ce62002.json  query-b757486f0721b95c6dac806e1733742f39b054778615408e69ebe281b9781c11.json  query-b97d5552028d5fad115f0e6bfa8b1d273a3226baca119d81e4f3ed72606eff5e.json  query-c164909072df6e4ea2f420667a3624722def0011b03fb5131c628921f1c37999.json  query-c81b1e506fbca6e2bb975f698073ad7a0807e3085dede0081a7fcfb7f0c6b971.json  query-de9e9ec4ae0ae3f8fcfd0eb5903db2ef2c89d3ba0f0a88f2d46a8f4ebd0411c0.json  (+2 more)
docs/: SETUP.md  (+1 more)
(+94 files in other folders)
